improved home page copy to better reflect user intersectionality

--- a/index.html
+++ b/index.html
@@ -336,6 +336,18 @@
             </div>
         </section>
 
+        <!-- Intersectional Bridge Section -->
+        <section class="py-5" style="background-color: var(--green-bg);">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-10 text-center">
+                        <h2 class="mb-4">Real Life Doesn't Fit in Boxes</h2>
+                        <p class="lead mb-0">Managing PCOS while trying to conceive? Cycle syncing while tracking macros? Training for a race while navigating perimenopause? You don't have to choose just one. Gaia adapts to your complexity, because your health isn't a single checkbox.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="benefits" class="benefits-section py-5">
             <div class="container">
                 <h2 class="text-center animate__animated animate__fadeIn">Your Health Journey, Simplified</h2>
@@ -347,7 +359,7 @@
                     </div>
                     <div class="col-md-8 animate__animated animate__fadeInRight">
                         <h3 class="mb-3">Everything in One Place</h3>
-                        <p>Connect apps, smart devices like Apple Watch, or add logs directly. No more juggling multiple health trackers or apps. Import data from Apple Health, add manual entries, or use voice logging—all your health information lives in one comprehensive dashboard.</p>
+                        <p>Connect Apple Watch, Oura Ring, Garmin, myFitnessPal, and more. Or, add logs directly with taps or voice. No more switching between your period tracker, fitness app, and nutrition log just to figure out why you're exhausted. Gaia brings it all together so you can actually understand what's happening in your body.</p>
                     </div>
                 </div>
 
@@ -580,38 +592,38 @@
                         <div class="accordion-item">
                             <h3 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Is my data private and secure?
+                                    How is Gaia different from other period trackers?
                                 </button>
                             </h3>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    <p>Most apps track one thing — your period, your workouts, or your food. Gaia connects all of it, then finds the patterns that actually explain what's going on. Why are you exhausted? What's triggering your flare-ups? What actually helps your sleep? That's what we're here for.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h3 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Is my data private and secure?
+                                </button>
+                            </h3>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
                                     <p>Absolutely! Your privacy is our top priority. All your health data is encrypted and stored securely. We never share your personal information with third parties without your explicit consent. You have complete control over your data and can export or delete it at any time.</p>
                                 </div>
                             </div>
                         </div>
-                        
-                        <div class="accordion-item">
-                            <h3 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How accurate are the cycle predictions?
-                                </button>
-                            </h3>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
-                                    <p>Go Go Gaia uses advanced algorithms that learn from your unique patterns over time. While no prediction can be 100% accurate, our predictions become increasingly precise as you continue to log your data. Most users report high accuracy after just 2-3 cycles of consistent tracking.</p>
-                                </div>
-                            </div>
-                        </div>
-                        
+
                         <div class="accordion-item">
                             <h3 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What makes Go Go Gaia different from other period tracking apps?
+                                    How accurate are the cycle predictions?
                                 </button>
                             </h3>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    <p>Unlike most period trackers, Go Go Gaia takes a holistic approach to women's health. We integrate cycle tracking with mood, fitness, sleep, and nutrition data to provide comprehensive insights about your overall wellbeing. Our correlation analysis helps you understand how different aspects of your health influence each other, empowering you to make more informed decisions.</p>
+                                    <p>Go Go Gaia uses advanced algorithms that learn from your unique patterns over time. While no prediction can be 100% accurate, our predictions become increasingly precise as you continue to log your data. Most users report high accuracy after just 2-3 cycles of consistent tracking.</p>
                                 </div>
                             </div>
                         </div>
