--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="hero-container d-flex flex-column flex-md-row align-items-center">
                 <div class="hero-text text-md-start mb-4 mb-md-0 animate__animated animate__fadeInLeft">
                     <h1 class="display-4 fw-bold">Women's Health<br>made <span style="color: #FF6B98; background: none; -webkit-text-fill-color: #FF6B98; background-clip: unset;">simple</span></h1>
-                    <p class="lead mb-4">Your body tells a story. We help you understand it.</p>
+                    <p class="lead mb-4">We're here for you, through every stage of life.</p>
                     <p class="lead mb-4">From balancing your cycles to optimising your lifestyle and reducing your symptoms, track every part of your health with confidence and clarity.</p>
 
                     <a class="btn btn-primary btn-lg" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" role="button">
