improved main page styling

--- a/index.html
+++ b/index.html
@@ -348,16 +348,16 @@
 
         <section id="benefits" class="benefits-section py-5">
             <div class="container">
-                <h2 class="text-center animate__animated animate__fadeIn">Your Health Journey, Simplified</h2>
-                <p class="text-center lead mb-5">From tracking to understanding—here's how Go Go Gaia turns your data into actionable insights</p>
+                <h2 class="text-center animate__animated animate__fadeIn">How It Works</h2>
+                <p class="text-center lead mb-5">Four steps to understanding your health</p>
 
                 <div class="row align-items-center mb-4">
                     <div class="col-md-4 animate__animated animate__fadeInLeft">
                         <img src="images/1.png" alt="Unified health dashboard - All your health data in one place" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
                     <div class="col-md-8 animate__animated animate__fadeInRight">
-                        <h3 class="mb-3">Everything in One Place</h3>
-                        <p>Connect Apple Watch, Oura Ring, Garmin, myFitnessPal, and more. Or, add logs directly with taps or voice. No more switching between your period tracker, fitness app, and nutrition log just to figure out why you're exhausted. Gaia brings it all together so you can actually understand what's happening in your body.</p>
+                        <h3 class="mb-3">Connect Your Data</h3>
+                        <p>Link Apple Watch, Oura Ring, Garmin, or myFitnessPal. Or log with a tap or voice. Everything shows up in one dashboard.</p>
                     </div>
                 </div>
 
@@ -366,8 +366,8 @@
                         <img src="images/5.png" alt="Sleep quality analysis - Understand what affects your wellbeing" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
                     <div class="col-md-8 animate__animated animate__fadeInLeft">
-                        <h3 class="mb-3">Understand Causes & Effects</h3>
-                        <p>Get summaries, charts, and trends to see what's really affecting you. Discover which habits help your sleep, what triggers your headaches, or how your cycle impacts your energy. See the cause-and-effect relationships unique to YOUR body.</p>
+                        <h3 class="mb-3">See Patterns</h3>
+                        <p>Which habits help your sleep. What triggers your headaches. How your cycle affects your energy. The app shows connections you'd miss tracking manually.</p>
                     </div>
                 </div>
 
@@ -376,8 +376,8 @@
                         <img src="images/4.png" alt="Cycle pattern analysis - Discover connections across your cycle, mood, and symptoms" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
                     <div class="col-md-8 animate__animated animate__fadeInRight">
-                        <h3 class="mb-3">Answers, Not Just Data</h3>
-                        <p>We find patterns across your cycle, habits, mood, sleep, and symptoms—so you stop asking "why." Stop drowning in charts and spreadsheets. Get clear insights about what's really affecting your health and wellbeing.</p>
+                        <h3 class="mb-3">Get Context</h3>
+                        <p>See trends and summaries, not just raw numbers. Your data gets sorted by cycle phase, week, month—whatever helps you understand what's happening.</p>
                     </div>
                 </div>
 
@@ -386,8 +386,8 @@
                         <img src="images/3.png" alt="AI health chatbot - Get personalized answers based on your data" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
                     <div class="col-md-8 animate__animated animate__fadeInLeft">
-                        <h3 class="mb-3">Ask Your Questions</h3>
-                        <p>Get answers in plain English from our AI chatbot based on YOUR data. Ask "Why am I so tired this week?" or "What helps my cramps?" and get personalized insights instantly. Export detailed health reports to share with your doctor for better conversations and care.</p>
+                        <h3 class="mb-3">Ask Questions</h3>
+                        <p>Type "Why am I so tired this week?" or "What helps my cramps?" The AI chatbot answers based on your data. Export reports to share with your doctor.</p>
                     </div>
                 </div>
 
@@ -396,8 +396,8 @@
                         <img src="images/2.png" alt="Period tracker data visualization - Analyze menstrual cycle patterns and fertility trends" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
                     <div class="col-md-8 animate__animated animate__fadeInRight">
-                        <h3 class="mb-3">Make Data-Driven Decisions</h3>
-                        <p>Identify patterns between your cycle, mood, and energy levels. Schedule important events during your peak performance days. Understand how lifestyle changes impact your wellbeing.</p>
+                        <h3 class="mb-3">Adjust Your Life</h3>
+                        <p>Schedule meetings during high-energy days. Rest when your body needs it. Change habits based on what actually works for you, not generic advice.</p>
                         <p class="small text-muted mt-3">Want to learn more? Check out our <a href="blog/cycle-syncing-guide.html" class="text-decoration-none" style="color: var(--primary);">complete guide to cycle syncing</a>.</p>
                     </div>
                 </div>
