added a wrapped page and mildly adjusted existing pages to try to raise our seo a bit more (have the ones on page 2 hit page 1)

--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
           <h5>Company</h5>
           <p><a href="about.html">About Us</a></p>
           <p><a href="blog/index.html">Blog</a></p>
+          <p><a href="wrapped.html">Health Wrapped 2025</a></p>
           <p><a href="https://hollandneurotech.com/privacy-policy.html">Privacy Policy</a></p>
           <p><a href="https://hollandneurotech.com/terms-and-conditions.html">Terms of Service</a></p>
         </div>
