tone of voice and internal liinking upgrades

--- a/wrapped.html
+++ b/wrapped.html
@@ -94,7 +94,7 @@
           "name": "Can I get an Apple Watch wrapped or fitness year in review?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Go Go Gaia integrates with Apple Health to give you a comprehensive year-in-review of your health and fitness data. Track your cycles, workouts, sleep, and more to see your complete Health Wrapped at the end of the year."
+            "text": "Go Go Gaia reads from Apple Health to give you a complete year-in-review of your health and fitness data. Track your cycles, workouts, sleep, and more to see your Health Wrapped at the end of the year."
           }
         },
         {
@@ -150,7 +150,7 @@
           "name": "Is there a sleep tracker wrapped or sleep year in review?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Go Go Gaia's Health Wrapped includes comprehensive sleep insights - your average sleep duration, best sleep month, how sleep quality changed across your cycle phases, and correlations between sleep and your mood, energy, and symptoms."
+            "text": "Go Go Gaia's Health Wrapped includes sleep insights like your average sleep duration, best sleep month, how sleep quality changed across your cycle phases, and correlations between sleep and your mood, energy, and symptoms."
           }
         },
         {
@@ -595,7 +595,7 @@
                 </div>
             </div>
             <div class="text-center mt-5">
-                <p class="text-muted"><i class="bi bi-info-circle me-2"></i>Go Go Gaia reads from Apple Health to combine all your data sources into one comprehensive year-in-review.</p>
+                <p class="text-muted"><i class="bi bi-info-circle me-2"></i>Go Go Gaia reads from Apple Health to combine all your data sources into one complete year-in-review.</p>
             </div>
         </div>
     </section>
@@ -612,7 +612,7 @@
                             <div class="text-center p-4">
                                 <div class="stat-icon mx-auto mb-3" style="color: #8259DC;"><i class="bi bi-collection"></i></div>
                                 <h5 class="fw-bold">All-in-One View</h5>
-                                <p class="text-muted">Combines data from multiple sources - your period tracker, fitness wearable, nutrition app, and more - into one comprehensive story.</p>
+                                <p class="text-muted">Combines data from multiple sources - your period tracker, fitness wearable, nutrition app, and more - into one complete picture.</p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -725,7 +725,7 @@
                             </h3>
                             <div id="faq7" class="accordion-collapse collapse" data-bs-parent="#wrappedFAQ">
                                 <div class="accordion-body">
-                                    Your Health Wrapped becomes available at the end of the year. The more data you track throughout 2025, the more detailed and insightful your recap will be. Start tracking now to build your most comprehensive Health Wrapped!
+                                    Your Health Wrapped becomes available at the end of the year. The more data you track throughout 2025, the more detailed your recap will be. Start tracking now to build your best Health Wrapped yet!
                                 </div>
                             </div>
                         </div>
